--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.upgradedemo">
+    package="com.upgrade">
 
     <application
         android:allowBackup="true"
@@ -9,7 +9,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        <activity android:name="com.upgrade.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -19,7 +19,7 @@
             <!-- FileProvider -->
             <provider
                 android:name="android.support.v4.content.FileProvider"
-                android:authorities="com.upgradedemo.provider"
+                android:authorities="com.upgrade.provider"
                 android:exported="false"
                 android:grantUriPermissions="true">
                 <meta-data
