itsnows <xue.com.fei@qq.com>

--- a/upgradelibrary/build.gradle
+++ b/upgradelibrary/build.gradle
@@ -1,6 +1,6 @@
 apply plugin: 'com.android.library'
 apply plugin: 'com.github.dcendents.android-maven'
-group='com.github.522287166'
+group = 'com.github.itsonws'
 android {
     compileSdkVersion 27
     buildToolsVersion '27.0.3'
@@ -24,9 +24,6 @@ android {
 
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
-    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
-        exclude group: 'com.android.support', module: 'support-annotations'
-    })
     implementation 'com.android.support:appcompat-v7:27.+'
     implementation 'com.android.support:cardview-v7:27.+'
     testImplementation 'junit:junit:4.12'
