--- a/upgradelibrary/build.gradle
+++ b/upgradelibrary/build.gradle
@@ -24,9 +24,11 @@ android {
 
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
+    implementation 'com.android.support:support-v4:27.+'
     implementation 'com.android.support:appcompat-v7:27.+'
     implementation 'com.android.support:cardview-v7:27.+'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
+
 }
