itsnows <xue.com.fei@qq.com>

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,8 +23,8 @@ dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'com.android.support:appcompat-v7:27.+'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
-    // implementation project(':upgradelibrary')
-    implementation 'com.github.itsnows:android-upgrade:1.0.4'
+    implementation project(':upgradelibrary')
+//    implementation 'com.github.itsnows:android-upgrade:1.0.4'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
