--- a/upgradelibrary/src/main/AndroidManifest.xml
+++ b/upgradelibrary/src/main/AndroidManifest.xml
@@ -38,6 +38,17 @@
             </intent-filter>
         </service>
 
+        <!-- FileProvider -->
+        <provider
+            android:name="android.support.v4.content.FileProvider"
+            android:authorities="com.runen.maxhealth.FileProvider"
+            android:exported="false"
+            android:grantUriPermissions="true">
+            <meta-data
+                android:name="android.support.FILE_PROVIDER_PATHS"
+                android:resource="@xml/provider_paths" />
+        </provider>
+
     </application>
 
 </manifest>
