--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,7 @@
         <!-- FileProvider -->
         <provider
             android:name="android.support.v4.content.FileProvider"
-            android:authorities="com.upgrade.provider"
+            android:authorities="com.upgrade.FileProvider"
             android:exported="false"
             android:grantUriPermissions="true">
             <meta-data
