--- a/upgradelibrary/src/main/AndroidManifest.xml
+++ b/upgradelibrary/src/main/AndroidManifest.xml
@@ -32,10 +32,9 @@
         <service
             android:name=".service.UpgradeService"
             android:enabled="true"
-            android:exported="true"
-            android:process=":upgrade">
+            android:exported="true">
             <intent-filter>
-                <action android:name="com.itsnows.upgrade.service.UpgradeService" />
+                <action android:name="{applicationId}.intent.action.UpgradeService" />
             </intent-filter>
         </service>
 
