--- a/upgradelibrary/app-update.json
+++ b/upgradelibrary/app-update.json
@@ -17,7 +17,7 @@
       ],
       "versionCode": 86,
       "versionName": "1.0.8.6",
-      "dowanloadUrl": "http://gdown.baidu.com/data/wisegame/16f98e07f392294b/QQ_794.apk",
+      "downloadUrl": "http://gdown.baidu.com/data/wisegame/16f98e07f392294b/QQ_794.apk",
       "md5": null
     },
     "beta": {
@@ -51,7 +51,7 @@
       ],
       "versionCode": 86,
       "versionName": "1.0.8.6",
-      "dowanloadUrl": "http://gdown.baidu.com/data/wisegame/16f98e07f392294b/QQ_794.apk",
+      "downloadUrl": "http://gdown.baidu.com/data/wisegame/16f98e07f392294b/QQ_794.apk",
       "md5": null
     }
   }
