--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,14 @@
 apply plugin: 'com.android.application'
 
 android {
+    signingConfigs {
+        debug {
+            storeFile file('../app-sign.jks')
+            storePassword '123456'
+            keyAlias = 'upgrade'
+            keyPassword '123456'
+        }
+    }
     compileSdkVersion 26
     buildToolsVersion '26.0.3'
     defaultConfig {
@@ -10,6 +18,7 @@ android {
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        signingConfig signingConfigs.debug
     }
     buildTypes {
         release {
@@ -30,7 +39,7 @@ dependencies {
     implementation 'com.android.support:appcompat-v7:26.0.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.1'
     implementation project(':upgradelibrary')
-//    implementation 'com.github.itsnows:android-upgrade:1.0.6'
+    // implementation 'com.github.itsnows:android-upgrade:1.0.6'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
