--- a/doc/app-update.json
+++ b/doc/app-update.json
@@ -25,16 +25,7 @@
       "date": "2018-02-09",
       "mode": 1,
       "log": [
-        "#新增商城模块（测试阶段，请勿付款）",
-        "#新增通知栏开关",
-        "#更换每日计步算法（由于开发组无华为P10设备，如还是偶发性数据异常情况，请华为P10用户出现问题请及时和我们反馈。）",
-        "#优化计步模块启动速度",
-        "#优化运动轨迹（定位偏差，GPS信号不好数据异常）",
-        "#优化闹钟稳定性",
-        "#优化App稳定性",
-        "#优化App性能",
-        "#优化App框架",
-        "#修复部分已知Bug"
+        "#内侧版本"
       ],
       "versionCode": 5,
       "versionName": "1.0.0.5",
