--- a/doc/app-update.json
+++ b/doc/app-update.json
@@ -12,23 +12,22 @@
         "#优化框架",
         "#修复部分已知Bug"
       ],
-      "versionCode": 5,
-      "versionName": "1.0.0.5",
+      "versionCode": 20,
+      "versionName": "1.2.0",
       "downloadUrl": "http://gdown.baidu.com/data/wisegame/16f98e07f392294b/QQ_794.apk",
       "md5": null
     },
     "beta": {
       "device": [
-        "JGB9K17928918126",
-        "BTFDU17113013878"
+        "JGB9K17928918126"
       ],
       "date": "2018-02-09",
       "mode": 1,
       "log": [
         "#内侧版本"
       ],
-      "versionCode": 5,
-      "versionName": "1.0.0.5",
+      "versionCode": 20,
+      "versionName": "1.2.0",
       "downloadUrl": "http://gdown.baidu.com/data/wisegame/16f98e07f392294b/QQ_794.apk",
       "md5": null
     }
