--- a/doc/app-update.json
+++ b/doc/app-update.json
@@ -4,13 +4,12 @@
       "date": "2018-02-09",
       "mode": 1,
       "log": [
-        "#新增通知栏开关",
-        "#新增卡包",
-        "#新增商城",
-        "#优化稳定性",
-        "#优化性能",
-        "#优化框架",
-        "#修复部分已知Bug"
+        "#升级模式支持普通升级、强制升级、灰度升级",
+        "#安装包下载支持 断点续传，分流下载，动态网络监听下载",
+        "#支持更新模板或自定义更新模板（json或xml）或下载链接",
+        "##支持通知栏显示和对话框显示（自定义主题）",
+        "#支持自定义对话框",
+        "#支持android 4.2以上设备"
       ],
       "versionCode": 20,
       "versionName": "1.2.0",
