--- a/upgradelibrary/src/main/AndroidManifest.xml
+++ b/upgradelibrary/src/main/AndroidManifest.xml
@@ -42,6 +42,20 @@
             </intent-filter>
         </service>
 
+        <!--PackagesReceiver-->
+        <receiver
+            android:name=".receiver.PackagesReceiver"
+            android:enabled="true"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.PACKAGE_ADDED" />
+                <action android:name="android.intent.action.PACKAGE_REPLACED" />
+                <action android:name="android.intent.action.PACKAGE_REMOVED" />
+
+                <data android:scheme="package" />
+            </intent-filter>
+        </receiver>
+
         <!-- UpgradeFileProvider -->
         <provider
             android:name=".provider.UpgradeFileProvider"
