--- a/doc/app-update.json
+++ b/doc/app-update.json
@@ -6,7 +6,7 @@
       "log": [
         "#升级模式支持普通升级、强制升级、灰度升级",
         "#下载支持断点续传、分流下载、动态网络监听下载",
-        "#安装支持自动安装申请sd卡和安装权限、自动安装（root权限）、自动清除安装包",
+        "#安装支持自动安装申请sd卡和安装权限、自动安装重启（root权限）、自动清除安装包",
         "#支持更新模板或自定义更新模板（json或xml）或下载链接",
         "#支持通知栏显示和对话框显示（自定义主题）",
         "#支持自定义对话框",
