--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,6 @@
-apply plugin: 'com.android.application'
+plugins {
+    id 'com.android.application'
+}
 
 android {
     signingConfigs {
@@ -9,12 +11,11 @@ android {
             keyPassword '123456'
         }
     }
-    compileSdkVersion 26
-    buildToolsVersion '26.0.3'
+    compileSdkVersion 31
     defaultConfig {
-        applicationId "com.upgrade"
+        applicationId "com.itsnows.android.upgrade"
         minSdkVersion 17
-        targetSdkVersion 26
+        targetSdkVersion 31
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
@@ -36,15 +37,21 @@ android {
         checkReleaseBuilds false
         abortOnError false
     }
+    namespace 'com.itsnows.android.upgrade'
 }
 
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
-    implementation 'com.android.support:appcompat-v7:26.0.0'
-    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
-    implementation project(':upgradelibrary')
+    implementation 'androidx.appcompat:appcompat:1.4.0'
+
+    // https://github.com/itsnows
     // implementation 'com.github.itsnows:android-upgrade:1.2.3'
-    testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'com.android.support.test:runner:1.0.2'
-    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+    implementation project(':upgradelibrary')
+
+    // Junit Testing
+    testImplementation 'junit:junit:4.13.2'
+
+    // Androidx Testing
+    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 }
