--- a/upgradelibrary/build.gradle
+++ b/upgradelibrary/build.gradle
@@ -20,7 +20,7 @@ android {
         }
     }
 
-    // Because the components are created only during the afterEvaluate phase, you must
+    /*// Because the components are created only during the afterEvaluate phase, you must
     // configure your publications using the afterEvaluate() lifecycle method.
     afterEvaluate {
         publishing {
@@ -46,7 +46,7 @@ android {
                 }
             }
         }
-    }
+    }*/
     namespace 'com.itsnows.upgrade'
 }
 
